@@ -88,14 +88,16 @@ public class MailPerformer extends AbstrakterDingeMacher {
         for (ITipChange change : changes) {
             CalendarDataObject appointment = change.getNewAppointment();
             appointment.setNotification(true);
-            writeMail(action, null, appointment, session);
+            int owner = getOwner(session, analysis, appointment);
+            writeMail(action, null, appointment, session, owner);
         }
         
         List<ITipAnnotation> annotations = analysis.getAnnotations();
         for (ITipAnnotation annotation : annotations) {
             Appointment appointment = annotation.getAppointment();
             appointment.setNotification(true);
-            writeMail(action, null, appointment, session);
+            int owner = getOwner(session, analysis, appointment);
+            writeMail(action, null, appointment, session, owner);
         }
         return Collections.emptyList();
     }
